Streaming works with mp4, thumbnails work

--- a/backend/index.html
+++ b/backend/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <video id="videoPlayer" width="50%" controls autoplay>
-            <source src="/video/asd" type="video/mp4" />
+            <!-- <source src="/videos/" type="video/mp4" /> -->
         </video>
     </body>
 </html>
